data/derived/sp14/progs/unify/prog1159.ml.out
Characters 91-93:
  let base = f 0 xs
                 ^^
Error: This expression has type 'a list
       but an expression was expected of type int
